[gd_scene load_steps=32 format=2]

[ext_resource path="res://characters/Yu/YuStateMachine.gd" type="Script" id=1]
[ext_resource path="res://characters/CharacterTemplate.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/Yu/YuCharacterRig.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/states/PerpetualState.gd" type="Script" id=4]
[ext_resource path="res://characters/states/state_aspects/WalkStateAspect.gd" type="Script" id=5]
[ext_resource path="res://characters/states/FiniteState.gd" type="Script" id=6]
[ext_resource path="res://characters/hit_effects/AttackTypeHitEffects.gd" type="Script" id=7]
[ext_resource path="res://characters/Yu/spritesheets/attack_b1.png" type="Texture" id=8]
[ext_resource path="res://characters/hit_effects/AttackerImpactHitEffect.tscn" type="PackedScene" id=9]
[ext_resource path="res://characters/Yu/states/YuWalkState.gd" type="Script" id=10]
[ext_resource path="res://characters/Yu/YuCharacterMain.gd" type="Script" id=11]
[ext_resource path="res://Logger.gd" type="Script" id=12]
[ext_resource path="res://characters/states/StateMachineState.gd" type="Script" id=13]
[ext_resource path="res://characters/Yu/states/YuAttackB1.gd" type="Script" id=14]
[ext_resource path="res://characters/states/state_aspects/MoveToEnemyStateAspect.gd" type="Script" id=15]
[ext_resource path="res://characters/states/AttackWithPhasesState.gd" type="Script" id=16]
[ext_resource path="res://characters/Yu/YuCatchingStateMachine.gd" type="Script" id=17]
[ext_resource path="res://characters/InvincibilityBlinker.tscn" type="PackedScene" id=18]
[ext_resource path="res://characters/live_data/CharacterStabilityLabel.gd" type="Script" id=19]
[ext_resource path="res://characters/live_data/CharacterPositionLabel.gd" type="Script" id=20]
[ext_resource path="res://characters/live_data/CharacterDataDisplayLabels.gd" type="Script" id=21]
[ext_resource path="res://characters/live_data/CharacterStateLabel.gd" type="Script" id=22]
[ext_resource path="res://characters/SpriteColorFlashRequestor.gd" type="Script" id=23]
[ext_resource path="res://characters/charge_special.wav" type="AudioStream" id=24]
[ext_resource path="res://characters/Yu/spritefx/attack_b2f_trail.png" type="Texture" id=25]
[ext_resource path="res://characters/Yu/ActiveEnemyCatch.gd" type="Script" id=26]
[ext_resource path="res://characters/Yu/spritesheets/walk.png" type="Texture" id=27]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "method"
tracks/0/path = NodePath("../../FSM/AttackB1")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_rig_movement"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "landing"
length = 2.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("HitboxGroup")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "AttackB1" ],
"method": "switch_to_area"
} ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 5 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="YuCharacterMain" groups=["Player"] instance=ExtResource( 2 )]
script = ExtResource( 11 )
sprite_size = Vector2( 300, 400 )

[node name="FSM" parent="." index="0"]
script = ExtResource( 1 )

[node name="Idle" type="Node" parent="FSM" index="0"]
script = ExtResource( 4 )
state_animation = "idle"

[node name="Walk" type="Node" parent="FSM" index="1"]
script = ExtResource( 10 )
state_animation = "walk"

[node name="WalkStateAspect" type="Node" parent="FSM/Walk" index="0"]
script = ExtResource( 5 )

[node name="AttackA1" type="Node" parent="FSM" index="2"]
script = ExtResource( 16 )
state_animation = "attack_a1"
next_state = "Idle"
state_commit_end_anim_sec = 1.0

[node name="WalkStateAspect" type="Node" parent="FSM/AttackA1" index="0"]
script = ExtResource( 5 )
move_speed = Vector2( 35, 10 )
change_facing = false

[node name="MoveToEnemyStateAspect" type="Node" parent="FSM/AttackA1" index="1"]
script = ExtResource( 15 )
collision_mask = 96

[node name="AttackB1" type="Node" parent="FSM" index="3"]
script = ExtResource( 14 )
state_animation = "attack_b1"
next_state = "Landing"
state_commit_anim_sec = 0.1
state_commit_end_anim_sec = 1.0

[node name="AttackA2" type="Node" parent="FSM" index="4"]
script = ExtResource( 16 )
state_animation = "attack_a2"
next_state = "Idle"
state_commit_end_anim_sec = 0.7

[node name="MoveToEnemyStateAspect" type="Node" parent="FSM/AttackA2" index="0"]
script = ExtResource( 15 )
max_move = 50.0
collision_mask = 96

[node name="AttackB2" type="Node" parent="FSM" index="5"]
script = ExtResource( 16 )
state_animation = "attack_b2"
next_state = "AttackB2F"
state_commit_end_anim_sec = 0.6

[node name="WalkStateAspect" type="Node" parent="FSM/AttackB2" index="0"]
script = ExtResource( 5 )
move_speed = Vector2( 10, 5 )
change_facing = false

[node name="AttackB2F" type="Node" parent="FSM" index="6"]
script = ExtResource( 16 )
__meta__ = {
"_editor_description_": ""
}
state_animation = "attack_b2f"
next_state = "Idle"
state_commit_end_anim_sec = 1.4

[node name="CatchAttack" type="Node" parent="FSM" index="7"]
script = ExtResource( 6 )
state_animation = "catching"
next_state = "Idle"
state_commit_end_anim_sec = 1.1

[node name="MoveToEnemyStateAspect" type="Node" parent="FSM/CatchAttack" index="0"]
script = ExtResource( 15 )
max_move = 50.0
min_target_distance = 50.0
collision_mask = 96

[node name="CaughtAttack1" type="Node" parent="FSM" index="8"]
script = ExtResource( 6 )
state_animation = "catch_attack"
next_state = "Idle"

[node name="HurtLow" type="Node" parent="FSM" index="9"]
script = ExtResource( 6 )
state_animation = "hurt_low"
next_state = "Idle"

[node name="Landing" type="Node" parent="FSM" index="10"]
script = ExtResource( 4 )
state_animation = "landing"
next_state = "Idle"

[node name="WalkStateAspect" type="Node" parent="FSM/Landing" index="0"]
script = ExtResource( 5 )

[node name="Catching" type="Node" parent="FSM" index="11"]
script = ExtResource( 13 )
initial_state = "CatchIdle"

[node name="FSM" type="Node" parent="FSM/Catching" index="0"]
script = ExtResource( 17 )
entity_path = NodePath("../../..")

[node name="CatchIdle" type="Node" parent="FSM/Catching/FSM" index="0"]
script = ExtResource( 6 )
state_animation = "catching"
next_state = "CatchIdle"

[node name="CatchAttack" type="Node" parent="FSM/Catching/FSM" index="1"]
script = ExtResource( 6 )
state_animation = "catch_attack"
next_state = "CatchIdle"

[node name="SpriteColorFlashRequestor" type="Node" parent="FSM" index="12"]
script = ExtResource( 23 )
flash_sound = ExtResource( 24 )

[node name="StatesTween" type="Tween" parent="FSM" index="13"]

[node name="YuCharacterRig" parent="Body" index="0" instance=ExtResource( 3 )]
position = Vector2( 0, -150 )

[node name="Sprite" parent="Body/YuCharacterRig" index="0"]
texture = ExtResource( 27 )
offset = Vector2( -106.371, 6.68986 )
hframes = 12
frame = 11

[node name="TrailFX" parent="Body/YuCharacterRig" index="1"]
modulate = Color( 1, 1, 1, 1 )
position = Vector2( 65.8415, -119.599 )
rotation = -0.367449
texture = ExtResource( 25 )
flip_h = false

[node name="AnimationPlayer" parent="Body/YuCharacterRig" index="3"]
anims/RESET = SubResource( 4 )
anims/landing = SubResource( 3 )

[node name="FXPlayer" parent="Body/YuCharacterRig" index="4"]
pitch_scale = 1.75

[node name="AttackboxGroup" parent="Body/YuCharacterRig" index="7"]
entity_path = NodePath("../../..")

[node name="HitboxGroup" parent="Body/YuCharacterRig" index="8"]
entity_path = NodePath("../../..")

[node name="CatchboxGroup" parent="Body/YuCharacterRig" index="9"]
entity_path = NodePath("../../..")

[node name="AttackTypeHitEffects" type="Node2D" parent="Body/YuCharacterRig" index="10"]
script = ExtResource( 7 )

[node name="AttackerImpactHitEffect" parent="Body/YuCharacterRig/AttackTypeHitEffects" index="0" instance=ExtResource( 9 )]

[node name="CatchPoint" parent="Body" index="1"]
position = Vector2( 75.9019, -196.513 )

[node name="ActiveEnemyCatch" type="RayCast2D" parent="Body" index="3"]
cast_to = Vector2( 95, 0 )
collision_mask = 96
collide_with_areas = true
collide_with_bodies = false
script = ExtResource( 26 )
catch_radius = 25.0

[node name="Terrain" type="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, 45 )
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="Logger" type="Node" parent="." index="3"]
script = ExtResource( 12 )

[node name="InvincibilityBlinker" parent="." index="4" instance=ExtResource( 18 )]
duration = 1.5
blink_frequency = 3
pre_blink_states = [ "Falling", "HurtLow" ]
dont_blink_sprites_paths = [ NodePath("../Body/YuCharacterRig/TrailFX"), NodePath("../Body/YuCharacterRig/TrailFX2") ]

[node name="CharacterDataDisplayLabels" type="Node2D" parent="." index="5"]
script = ExtResource( 21 )

[node name="CharacterPositionLabel" type="Label" parent="CharacterDataDisplayLabels" index="0"]
margin_left = -149.552
margin_top = -427.967
margin_right = -49.5517
margin_bottom = -402.967
rect_min_size = Vector2( 100, 25 )
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/normal = SubResource( 2 )
text = "<NO_STATE>"
align = 1
valign = 1
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CharacterStabilityLabel" type="Label" parent="CharacterDataDisplayLabels" index="1"]
margin_left = -1.18565
margin_top = -429.429
margin_right = 98.8143
margin_bottom = -404.429
rect_min_size = Vector2( 100, 25 )
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/normal = SubResource( 2 )
text = "<NO_STATE>"
align = 1
valign = 1
script = ExtResource( 19 )
__meta__ = {
"_editor_description_": ""
}

[node name="CharacterStateLabel" type="Label" parent="CharacterDataDisplayLabels" index="2"]
margin_left = -72.0798
margin_top = -390.693
margin_right = 27.9202
margin_bottom = -365.693
rect_min_size = Vector2( 100, 25 )
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/normal = SubResource( 2 )
text = "<NO_STATE>"
align = 1
valign = 1
script = ExtResource( 22 )
__meta__ = {
"_editor_description_": ""
}

[node name="Dropshadow" parent="." index="6"]
position = Vector2( -12.1684, 59.8686 )
scale = Vector2( 3.5, 1 )

[connection signal="state_changed" from="FSM" to="InvincibilityBlinker" method="_on_CharacterTemplate_state_changed"]
[connection signal="caught" from="Body/YuCharacterRig/CatchboxGroup/CatchAttack" to="FSM" method="_on_Catchbox_caught"]

[editable path="Body/YuCharacterRig"]
